parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> stmts
Rule 1     stmts -> stmt stmts
Rule 2     stmts -> empty
Rule 3     stmt -> assign
Rule 4     stmt -> out
Rule 5     stmt -> if
Rule 6     stmt -> loop
Rule 7     stmt -> funcdec
Rule 8     funcdec -> FUNCTION ID params OPEN_BRACKET stmts CLOSE_BRACKET
Rule 9     params -> OPEN_PARENT args CLOSE_PARENT
Rule 10    params -> OPEN_PARENT CLOSE_PARENT
Rule 11    args -> args COMMA ID
Rule 12    args -> ID
Rule 13    if -> IF relexp OPEN_BRACKET stmts CLOSE_BRACKET ELSE OPEN_BRACKET stmts CLOSE_BRACKET
Rule 14    if -> IF relexp OPEN_BRACKET stmts CLOSE_BRACKET
Rule 15    if -> IF error OPEN_BRACKET stmts CLOSE_BRACKET ELSE OPEN_BRACKET stmts CLOSE_BRACKET
Rule 16    if -> IF error OPEN_BRACKET stmts CLOSE_BRACKET
Rule 17    loop -> LOOP relexp OPEN_BRACKET stmts CLOSE_BRACKET
Rule 18    loop -> LOOP error OPEN_BRACKET stmts CLOSE_BRACKET
Rule 19    assign -> ID ASSIGNER relexp
Rule 20    out -> PRINT relexp
Rule 21    relexp -> expression
Rule 22    relexp -> relexp GT relexp
Rule 23    relexp -> relexp EQ relexp
Rule 24    relexp -> relexp LT relexp
Rule 25    expression -> expression PLUS expression
Rule 26    expression -> expression OR relexp
Rule 27    expression -> expression MINUS expression
Rule 28    expression -> term
Rule 29    term -> term MULT expression
Rule 30    term -> term DIV expression
Rule 31    term -> term AND relexp
Rule 32    term -> factor
Rule 33    factor -> NUMBER
Rule 34    factor -> ID
Rule 35    factor -> INPUT
Rule 36    factor -> PLUS expression
Rule 37    factor -> MINUS expression
Rule 38    factor -> NOT relexp
Rule 39    factor -> OPEN_PARENT relexp CLOSE_PARENT
Rule 40    factor -> ID callparams
Rule 41    callparams -> OPEN_PARENT callargs CLOSE_PARENT
Rule 42    callparams -> OPEN_PARENT CLOSE_PARENT
Rule 43    callargs -> callargs COMMA relexp
Rule 44    callargs -> relexp
Rule 45    empty -> <empty>

Terminals, with rules where they appear

AND                  : 31
ASSIGNER             : 19
CLOSE_BRACKET        : 8 13 13 14 15 15 16 17 18
CLOSE_PARENT         : 9 10 39 41 42
COMMA                : 11 43
DIV                  : 30
ELSE                 : 13 15
EQ                   : 23
FUNCTION             : 8
GT                   : 22
ID                   : 8 11 12 19 34 40
IF                   : 13 14 15 16
INPUT                : 35
LOOP                 : 17 18
LT                   : 24
MINUS                : 27 37
MULT                 : 29
NOT                  : 38
NUMBER               : 33
OPEN_BRACKET         : 8 13 13 14 15 15 16 17 18
OPEN_PARENT          : 9 10 39 41 42
OR                   : 26
PLUS                 : 25 36
PRINT                : 20
error                : 15 16 18

Nonterminals, with rules where they appear

args                 : 9 11
assign               : 3
callargs             : 41 43
callparams           : 40
empty                : 2
expression           : 21 25 25 26 27 27 29 30 36 37
factor               : 32
funcdec              : 7
if                   : 5
loop                 : 6
out                  : 4
params               : 8
relexp               : 13 14 17 19 20 22 22 23 23 24 24 26 31 38 39 43 44
stmt                 : 1
stmts                : 1 8 13 13 14 15 15 16 17 18 0
term                 : 28 29 30 31

Parsing method: LALR

state 0

    (0) S' -> . stmts
    (1) stmts -> . stmt stmts
    (2) stmts -> . empty
    (3) stmt -> . assign
    (4) stmt -> . out
    (5) stmt -> . if
    (6) stmt -> . loop
    (7) stmt -> . funcdec
    (45) empty -> .
    (19) assign -> . ID ASSIGNER relexp
    (20) out -> . PRINT relexp
    (13) if -> . IF relexp OPEN_BRACKET stmts CLOSE_BRACKET ELSE OPEN_BRACKET stmts CLOSE_BRACKET
    (14) if -> . IF relexp OPEN_BRACKET stmts CLOSE_BRACKET
    (15) if -> . IF error OPEN_BRACKET stmts CLOSE_BRACKET ELSE OPEN_BRACKET stmts CLOSE_BRACKET
    (16) if -> . IF error OPEN_BRACKET stmts CLOSE_BRACKET
    (17) loop -> . LOOP relexp OPEN_BRACKET stmts CLOSE_BRACKET
    (18) loop -> . LOOP error OPEN_BRACKET stmts CLOSE_BRACKET
    (8) funcdec -> . FUNCTION ID params OPEN_BRACKET stmts CLOSE_BRACKET

    $end            reduce using rule 45 (empty -> .)
    ID              shift and go to state 9
    PRINT           shift and go to state 10
    IF              shift and go to state 11
    LOOP            shift and go to state 12
    FUNCTION        shift and go to state 13

    stmts                          shift and go to state 1
    stmt                           shift and go to state 2
    empty                          shift and go to state 3
    assign                         shift and go to state 4
    out                            shift and go to state 5
    if                             shift and go to state 6
    loop                           shift and go to state 7
    funcdec                        shift and go to state 8

state 1

    (0) S' -> stmts .



state 2

    (1) stmts -> stmt . stmts
    (1) stmts -> . stmt stmts
    (2) stmts -> . empty
    (3) stmt -> . assign
    (4) stmt -> . out
    (5) stmt -> . if
    (6) stmt -> . loop
    (7) stmt -> . funcdec
    (45) empty -> .
    (19) assign -> . ID ASSIGNER relexp
    (20) out -> . PRINT relexp
    (13) if -> . IF relexp OPEN_BRACKET stmts CLOSE_BRACKET ELSE OPEN_BRACKET stmts CLOSE_BRACKET
    (14) if -> . IF relexp OPEN_BRACKET stmts CLOSE_BRACKET
    (15) if -> . IF error OPEN_BRACKET stmts CLOSE_BRACKET ELSE OPEN_BRACKET stmts CLOSE_BRACKET
    (16) if -> . IF error OPEN_BRACKET stmts CLOSE_BRACKET
    (17) loop -> . LOOP relexp OPEN_BRACKET stmts CLOSE_BRACKET
    (18) loop -> . LOOP error OPEN_BRACKET stmts CLOSE_BRACKET
    (8) funcdec -> . FUNCTION ID params OPEN_BRACKET stmts CLOSE_BRACKET

    $end            reduce using rule 45 (empty -> .)
    CLOSE_BRACKET   reduce using rule 45 (empty -> .)
    ID              shift and go to state 9
    PRINT           shift and go to state 10
    IF              shift and go to state 11
    LOOP            shift and go to state 12
    FUNCTION        shift and go to state 13

    stmt                           shift and go to state 2
    stmts                          shift and go to state 14
    empty                          shift and go to state 3
    assign                         shift and go to state 4
    out                            shift and go to state 5
    if                             shift and go to state 6
    loop                           shift and go to state 7
    funcdec                        shift and go to state 8

state 3

    (2) stmts -> empty .

    $end            reduce using rule 2 (stmts -> empty .)
    CLOSE_BRACKET   reduce using rule 2 (stmts -> empty .)


state 4

    (3) stmt -> assign .

    ID              reduce using rule 3 (stmt -> assign .)
    PRINT           reduce using rule 3 (stmt -> assign .)
    IF              reduce using rule 3 (stmt -> assign .)
    LOOP            reduce using rule 3 (stmt -> assign .)
    FUNCTION        reduce using rule 3 (stmt -> assign .)
    $end            reduce using rule 3 (stmt -> assign .)
    CLOSE_BRACKET   reduce using rule 3 (stmt -> assign .)


state 5

    (4) stmt -> out .

    ID              reduce using rule 4 (stmt -> out .)
    PRINT           reduce using rule 4 (stmt -> out .)
    IF              reduce using rule 4 (stmt -> out .)
    LOOP            reduce using rule 4 (stmt -> out .)
    FUNCTION        reduce using rule 4 (stmt -> out .)
    $end            reduce using rule 4 (stmt -> out .)
    CLOSE_BRACKET   reduce using rule 4 (stmt -> out .)


state 6

    (5) stmt -> if .

    ID              reduce using rule 5 (stmt -> if .)
    PRINT           reduce using rule 5 (stmt -> if .)
    IF              reduce using rule 5 (stmt -> if .)
    LOOP            reduce using rule 5 (stmt -> if .)
    FUNCTION        reduce using rule 5 (stmt -> if .)
    $end            reduce using rule 5 (stmt -> if .)
    CLOSE_BRACKET   reduce using rule 5 (stmt -> if .)


state 7

    (6) stmt -> loop .

    ID              reduce using rule 6 (stmt -> loop .)
    PRINT           reduce using rule 6 (stmt -> loop .)
    IF              reduce using rule 6 (stmt -> loop .)
    LOOP            reduce using rule 6 (stmt -> loop .)
    FUNCTION        reduce using rule 6 (stmt -> loop .)
    $end            reduce using rule 6 (stmt -> loop .)
    CLOSE_BRACKET   reduce using rule 6 (stmt -> loop .)


state 8

    (7) stmt -> funcdec .

    ID              reduce using rule 7 (stmt -> funcdec .)
    PRINT           reduce using rule 7 (stmt -> funcdec .)
    IF              reduce using rule 7 (stmt -> funcdec .)
    LOOP            reduce using rule 7 (stmt -> funcdec .)
    FUNCTION        reduce using rule 7 (stmt -> funcdec .)
    $end            reduce using rule 7 (stmt -> funcdec .)
    CLOSE_BRACKET   reduce using rule 7 (stmt -> funcdec .)


state 9

    (19) assign -> ID . ASSIGNER relexp

    ASSIGNER        shift and go to state 15


state 10

    (20) out -> PRINT . relexp
    (21) relexp -> . expression
    (22) relexp -> . relexp GT relexp
    (23) relexp -> . relexp EQ relexp
    (24) relexp -> . relexp LT relexp
    (25) expression -> . expression PLUS expression
    (26) expression -> . expression OR relexp
    (27) expression -> . expression MINUS expression
    (28) expression -> . term
    (29) term -> . term MULT expression
    (30) term -> . term DIV expression
    (31) term -> . term AND relexp
    (32) term -> . factor
    (33) factor -> . NUMBER
    (34) factor -> . ID
    (35) factor -> . INPUT
    (36) factor -> . PLUS expression
    (37) factor -> . MINUS expression
    (38) factor -> . NOT relexp
    (39) factor -> . OPEN_PARENT relexp CLOSE_PARENT
    (40) factor -> . ID callparams

    NUMBER          shift and go to state 22
    ID              shift and go to state 23
    INPUT           shift and go to state 24
    PLUS            shift and go to state 18
    MINUS           shift and go to state 19
    NOT             shift and go to state 25
    OPEN_PARENT     shift and go to state 26

    relexp                         shift and go to state 16
    expression                     shift and go to state 17
    term                           shift and go to state 20
    factor                         shift and go to state 21

state 11

    (13) if -> IF . relexp OPEN_BRACKET stmts CLOSE_BRACKET ELSE OPEN_BRACKET stmts CLOSE_BRACKET
    (14) if -> IF . relexp OPEN_BRACKET stmts CLOSE_BRACKET
    (15) if -> IF . error OPEN_BRACKET stmts CLOSE_BRACKET ELSE OPEN_BRACKET stmts CLOSE_BRACKET
    (16) if -> IF . error OPEN_BRACKET stmts CLOSE_BRACKET
    (21) relexp -> . expression
    (22) relexp -> . relexp GT relexp
    (23) relexp -> . relexp EQ relexp
    (24) relexp -> . relexp LT relexp
    (25) expression -> . expression PLUS expression
    (26) expression -> . expression OR relexp
    (27) expression -> . expression MINUS expression
    (28) expression -> . term
    (29) term -> . term MULT expression
    (30) term -> . term DIV expression
    (31) term -> . term AND relexp
    (32) term -> . factor
    (33) factor -> . NUMBER
    (34) factor -> . ID
    (35) factor -> . INPUT
    (36) factor -> . PLUS expression
    (37) factor -> . MINUS expression
    (38) factor -> . NOT relexp
    (39) factor -> . OPEN_PARENT relexp CLOSE_PARENT
    (40) factor -> . ID callparams

    error           shift and go to state 28
    NUMBER          shift and go to state 22
    ID              shift and go to state 23
    INPUT           shift and go to state 24
    PLUS            shift and go to state 18
    MINUS           shift and go to state 19
    NOT             shift and go to state 25
    OPEN_PARENT     shift and go to state 26

    relexp                         shift and go to state 27
    expression                     shift and go to state 17
    term                           shift and go to state 20
    factor                         shift and go to state 21

state 12

    (17) loop -> LOOP . relexp OPEN_BRACKET stmts CLOSE_BRACKET
    (18) loop -> LOOP . error OPEN_BRACKET stmts CLOSE_BRACKET
    (21) relexp -> . expression
    (22) relexp -> . relexp GT relexp
    (23) relexp -> . relexp EQ relexp
    (24) relexp -> . relexp LT relexp
    (25) expression -> . expression PLUS expression
    (26) expression -> . expression OR relexp
    (27) expression -> . expression MINUS expression
    (28) expression -> . term
    (29) term -> . term MULT expression
    (30) term -> . term DIV expression
    (31) term -> . term AND relexp
    (32) term -> . factor
    (33) factor -> . NUMBER
    (34) factor -> . ID
    (35) factor -> . INPUT
    (36) factor -> . PLUS expression
    (37) factor -> . MINUS expression
    (38) factor -> . NOT relexp
    (39) factor -> . OPEN_PARENT relexp CLOSE_PARENT
    (40) factor -> . ID callparams

    error           shift and go to state 30
    NUMBER          shift and go to state 22
    ID              shift and go to state 23
    INPUT           shift and go to state 24
    PLUS            shift and go to state 18
    MINUS           shift and go to state 19
    NOT             shift and go to state 25
    OPEN_PARENT     shift and go to state 26

    relexp                         shift and go to state 29
    expression                     shift and go to state 17
    term                           shift and go to state 20
    factor                         shift and go to state 21

state 13

    (8) funcdec -> FUNCTION . ID params OPEN_BRACKET stmts CLOSE_BRACKET

    ID              shift and go to state 31


state 14

    (1) stmts -> stmt stmts .

    $end            reduce using rule 1 (stmts -> stmt stmts .)
    CLOSE_BRACKET   reduce using rule 1 (stmts -> stmt stmts .)


state 15

    (19) assign -> ID ASSIGNER . relexp
    (21) relexp -> . expression
    (22) relexp -> . relexp GT relexp
    (23) relexp -> . relexp EQ relexp
    (24) relexp -> . relexp LT relexp
    (25) expression -> . expression PLUS expression
    (26) expression -> . expression OR relexp
    (27) expression -> . expression MINUS expression
    (28) expression -> . term
    (29) term -> . term MULT expression
    (30) term -> . term DIV expression
    (31) term -> . term AND relexp
    (32) term -> . factor
    (33) factor -> . NUMBER
    (34) factor -> . ID
    (35) factor -> . INPUT
    (36) factor -> . PLUS expression
    (37) factor -> . MINUS expression
    (38) factor -> . NOT relexp
    (39) factor -> . OPEN_PARENT relexp CLOSE_PARENT
    (40) factor -> . ID callparams

    NUMBER          shift and go to state 22
    ID              shift and go to state 23
    INPUT           shift and go to state 24
    PLUS            shift and go to state 18
    MINUS           shift and go to state 19
    NOT             shift and go to state 25
    OPEN_PARENT     shift and go to state 26

    relexp                         shift and go to state 32
    expression                     shift and go to state 17
    term                           shift and go to state 20
    factor                         shift and go to state 21

state 16

    (20) out -> PRINT relexp .
    (22) relexp -> relexp . GT relexp
    (23) relexp -> relexp . EQ relexp
    (24) relexp -> relexp . LT relexp

    ID              reduce using rule 20 (out -> PRINT relexp .)
    PRINT           reduce using rule 20 (out -> PRINT relexp .)
    IF              reduce using rule 20 (out -> PRINT relexp .)
    LOOP            reduce using rule 20 (out -> PRINT relexp .)
    FUNCTION        reduce using rule 20 (out -> PRINT relexp .)
    $end            reduce using rule 20 (out -> PRINT relexp .)
    CLOSE_BRACKET   reduce using rule 20 (out -> PRINT relexp .)
    GT              shift and go to state 33
    EQ              shift and go to state 34
    LT              shift and go to state 35


state 17

    (21) relexp -> expression .
    (25) expression -> expression . PLUS expression
    (26) expression -> expression . OR relexp
    (27) expression -> expression . MINUS expression

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for OR resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
    GT              reduce using rule 21 (relexp -> expression .)
    EQ              reduce using rule 21 (relexp -> expression .)
    LT              reduce using rule 21 (relexp -> expression .)
    ID              reduce using rule 21 (relexp -> expression .)
    PRINT           reduce using rule 21 (relexp -> expression .)
    IF              reduce using rule 21 (relexp -> expression .)
    LOOP            reduce using rule 21 (relexp -> expression .)
    FUNCTION        reduce using rule 21 (relexp -> expression .)
    $end            reduce using rule 21 (relexp -> expression .)
    CLOSE_BRACKET   reduce using rule 21 (relexp -> expression .)
    OPEN_BRACKET    reduce using rule 21 (relexp -> expression .)
    MULT            reduce using rule 21 (relexp -> expression .)
    DIV             reduce using rule 21 (relexp -> expression .)
    AND             reduce using rule 21 (relexp -> expression .)
    CLOSE_PARENT    reduce using rule 21 (relexp -> expression .)
    COMMA           reduce using rule 21 (relexp -> expression .)
    PLUS            shift and go to state 36
    OR              shift and go to state 37
    MINUS           shift and go to state 38

  ! PLUS            [ reduce using rule 21 (relexp -> expression .) ]
  ! OR              [ reduce using rule 21 (relexp -> expression .) ]
  ! MINUS           [ reduce using rule 21 (relexp -> expression .) ]


state 18

    (36) factor -> PLUS . expression
    (25) expression -> . expression PLUS expression
    (26) expression -> . expression OR relexp
    (27) expression -> . expression MINUS expression
    (28) expression -> . term
    (29) term -> . term MULT expression
    (30) term -> . term DIV expression
    (31) term -> . term AND relexp
    (32) term -> . factor
    (33) factor -> . NUMBER
    (34) factor -> . ID
    (35) factor -> . INPUT
    (36) factor -> . PLUS expression
    (37) factor -> . MINUS expression
    (38) factor -> . NOT relexp
    (39) factor -> . OPEN_PARENT relexp CLOSE_PARENT
    (40) factor -> . ID callparams

    NUMBER          shift and go to state 22
    ID              shift and go to state 23
    INPUT           shift and go to state 24
    PLUS            shift and go to state 18
    MINUS           shift and go to state 19
    NOT             shift and go to state 25
    OPEN_PARENT     shift and go to state 26

    expression                     shift and go to state 39
    term                           shift and go to state 20
    factor                         shift and go to state 21

state 19

    (37) factor -> MINUS . expression
    (25) expression -> . expression PLUS expression
    (26) expression -> . expression OR relexp
    (27) expression -> . expression MINUS expression
    (28) expression -> . term
    (29) term -> . term MULT expression
    (30) term -> . term DIV expression
    (31) term -> . term AND relexp
    (32) term -> . factor
    (33) factor -> . NUMBER
    (34) factor -> . ID
    (35) factor -> . INPUT
    (36) factor -> . PLUS expression
    (37) factor -> . MINUS expression
    (38) factor -> . NOT relexp
    (39) factor -> . OPEN_PARENT relexp CLOSE_PARENT
    (40) factor -> . ID callparams

    NUMBER          shift and go to state 22
    ID              shift and go to state 23
    INPUT           shift and go to state 24
    PLUS            shift and go to state 18
    MINUS           shift and go to state 19
    NOT             shift and go to state 25
    OPEN_PARENT     shift and go to state 26

    expression                     shift and go to state 40
    term                           shift and go to state 20
    factor                         shift and go to state 21

state 20

    (28) expression -> term .
    (29) term -> term . MULT expression
    (30) term -> term . DIV expression
    (31) term -> term . AND relexp

  ! shift/reduce conflict for MULT resolved as shift
  ! shift/reduce conflict for DIV resolved as shift
  ! shift/reduce conflict for AND resolved as shift
    PLUS            reduce using rule 28 (expression -> term .)
    OR              reduce using rule 28 (expression -> term .)
    MINUS           reduce using rule 28 (expression -> term .)
    GT              reduce using rule 28 (expression -> term .)
    EQ              reduce using rule 28 (expression -> term .)
    LT              reduce using rule 28 (expression -> term .)
    ID              reduce using rule 28 (expression -> term .)
    PRINT           reduce using rule 28 (expression -> term .)
    IF              reduce using rule 28 (expression -> term .)
    LOOP            reduce using rule 28 (expression -> term .)
    FUNCTION        reduce using rule 28 (expression -> term .)
    $end            reduce using rule 28 (expression -> term .)
    CLOSE_BRACKET   reduce using rule 28 (expression -> term .)
    OPEN_BRACKET    reduce using rule 28 (expression -> term .)
    CLOSE_PARENT    reduce using rule 28 (expression -> term .)
    COMMA           reduce using rule 28 (expression -> term .)
    MULT            shift and go to state 41
    DIV             shift and go to state 42
    AND             shift and go to state 43

  ! MULT            [ reduce using rule 28 (expression -> term .) ]
  ! DIV             [ reduce using rule 28 (expression -> term .) ]
  ! AND             [ reduce using rule 28 (expression -> term .) ]


state 21

    (32) term -> factor .

    MULT            reduce using rule 32 (term -> factor .)
    DIV             reduce using rule 32 (term -> factor .)
    AND             reduce using rule 32 (term -> factor .)
    PLUS            reduce using rule 32 (term -> factor .)
    OR              reduce using rule 32 (term -> factor .)
    MINUS           reduce using rule 32 (term -> factor .)
    GT              reduce using rule 32 (term -> factor .)
    EQ              reduce using rule 32 (term -> factor .)
    LT              reduce using rule 32 (term -> factor .)
    ID              reduce using rule 32 (term -> factor .)
    PRINT           reduce using rule 32 (term -> factor .)
    IF              reduce using rule 32 (term -> factor .)
    LOOP            reduce using rule 32 (term -> factor .)
    FUNCTION        reduce using rule 32 (term -> factor .)
    $end            reduce using rule 32 (term -> factor .)
    CLOSE_BRACKET   reduce using rule 32 (term -> factor .)
    OPEN_BRACKET    reduce using rule 32 (term -> factor .)
    CLOSE_PARENT    reduce using rule 32 (term -> factor .)
    COMMA           reduce using rule 32 (term -> factor .)


state 22

    (33) factor -> NUMBER .

    MULT            reduce using rule 33 (factor -> NUMBER .)
    DIV             reduce using rule 33 (factor -> NUMBER .)
    AND             reduce using rule 33 (factor -> NUMBER .)
    PLUS            reduce using rule 33 (factor -> NUMBER .)
    OR              reduce using rule 33 (factor -> NUMBER .)
    MINUS           reduce using rule 33 (factor -> NUMBER .)
    GT              reduce using rule 33 (factor -> NUMBER .)
    EQ              reduce using rule 33 (factor -> NUMBER .)
    LT              reduce using rule 33 (factor -> NUMBER .)
    ID              reduce using rule 33 (factor -> NUMBER .)
    PRINT           reduce using rule 33 (factor -> NUMBER .)
    IF              reduce using rule 33 (factor -> NUMBER .)
    LOOP            reduce using rule 33 (factor -> NUMBER .)
    FUNCTION        reduce using rule 33 (factor -> NUMBER .)
    $end            reduce using rule 33 (factor -> NUMBER .)
    CLOSE_BRACKET   reduce using rule 33 (factor -> NUMBER .)
    OPEN_BRACKET    reduce using rule 33 (factor -> NUMBER .)
    CLOSE_PARENT    reduce using rule 33 (factor -> NUMBER .)
    COMMA           reduce using rule 33 (factor -> NUMBER .)


state 23

    (34) factor -> ID .
    (40) factor -> ID . callparams
    (41) callparams -> . OPEN_PARENT callargs CLOSE_PARENT
    (42) callparams -> . OPEN_PARENT CLOSE_PARENT

    MULT            reduce using rule 34 (factor -> ID .)
    DIV             reduce using rule 34 (factor -> ID .)
    AND             reduce using rule 34 (factor -> ID .)
    PLUS            reduce using rule 34 (factor -> ID .)
    OR              reduce using rule 34 (factor -> ID .)
    MINUS           reduce using rule 34 (factor -> ID .)
    GT              reduce using rule 34 (factor -> ID .)
    EQ              reduce using rule 34 (factor -> ID .)
    LT              reduce using rule 34 (factor -> ID .)
    ID              reduce using rule 34 (factor -> ID .)
    PRINT           reduce using rule 34 (factor -> ID .)
    IF              reduce using rule 34 (factor -> ID .)
    LOOP            reduce using rule 34 (factor -> ID .)
    FUNCTION        reduce using rule 34 (factor -> ID .)
    $end            reduce using rule 34 (factor -> ID .)
    CLOSE_BRACKET   reduce using rule 34 (factor -> ID .)
    OPEN_BRACKET    reduce using rule 34 (factor -> ID .)
    CLOSE_PARENT    reduce using rule 34 (factor -> ID .)
    COMMA           reduce using rule 34 (factor -> ID .)
    OPEN_PARENT     shift and go to state 45

    callparams                     shift and go to state 44

state 24

    (35) factor -> INPUT .

    MULT            reduce using rule 35 (factor -> INPUT .)
    DIV             reduce using rule 35 (factor -> INPUT .)
    AND             reduce using rule 35 (factor -> INPUT .)
    PLUS            reduce using rule 35 (factor -> INPUT .)
    OR              reduce using rule 35 (factor -> INPUT .)
    MINUS           reduce using rule 35 (factor -> INPUT .)
    GT              reduce using rule 35 (factor -> INPUT .)
    EQ              reduce using rule 35 (factor -> INPUT .)
    LT              reduce using rule 35 (factor -> INPUT .)
    ID              reduce using rule 35 (factor -> INPUT .)
    PRINT           reduce using rule 35 (factor -> INPUT .)
    IF              reduce using rule 35 (factor -> INPUT .)
    LOOP            reduce using rule 35 (factor -> INPUT .)
    FUNCTION        reduce using rule 35 (factor -> INPUT .)
    $end            reduce using rule 35 (factor -> INPUT .)
    CLOSE_BRACKET   reduce using rule 35 (factor -> INPUT .)
    OPEN_BRACKET    reduce using rule 35 (factor -> INPUT .)
    CLOSE_PARENT    reduce using rule 35 (factor -> INPUT .)
    COMMA           reduce using rule 35 (factor -> INPUT .)


state 25

    (38) factor -> NOT . relexp
    (21) relexp -> . expression
    (22) relexp -> . relexp GT relexp
    (23) relexp -> . relexp EQ relexp
    (24) relexp -> . relexp LT relexp
    (25) expression -> . expression PLUS expression
    (26) expression -> . expression OR relexp
    (27) expression -> . expression MINUS expression
    (28) expression -> . term
    (29) term -> . term MULT expression
    (30) term -> . term DIV expression
    (31) term -> . term AND relexp
    (32) term -> . factor
    (33) factor -> . NUMBER
    (34) factor -> . ID
    (35) factor -> . INPUT
    (36) factor -> . PLUS expression
    (37) factor -> . MINUS expression
    (38) factor -> . NOT relexp
    (39) factor -> . OPEN_PARENT relexp CLOSE_PARENT
    (40) factor -> . ID callparams

    NUMBER          shift and go to state 22
    ID              shift and go to state 23
    INPUT           shift and go to state 24
    PLUS            shift and go to state 18
    MINUS           shift and go to state 19
    NOT             shift and go to state 25
    OPEN_PARENT     shift and go to state 26

    relexp                         shift and go to state 46
    expression                     shift and go to state 17
    term                           shift and go to state 20
    factor                         shift and go to state 21

state 26

    (39) factor -> OPEN_PARENT . relexp CLOSE_PARENT
    (21) relexp -> . expression
    (22) relexp -> . relexp GT relexp
    (23) relexp -> . relexp EQ relexp
    (24) relexp -> . relexp LT relexp
    (25) expression -> . expression PLUS expression
    (26) expression -> . expression OR relexp
    (27) expression -> . expression MINUS expression
    (28) expression -> . term
    (29) term -> . term MULT expression
    (30) term -> . term DIV expression
    (31) term -> . term AND relexp
    (32) term -> . factor
    (33) factor -> . NUMBER
    (34) factor -> . ID
    (35) factor -> . INPUT
    (36) factor -> . PLUS expression
    (37) factor -> . MINUS expression
    (38) factor -> . NOT relexp
    (39) factor -> . OPEN_PARENT relexp CLOSE_PARENT
    (40) factor -> . ID callparams

    NUMBER          shift and go to state 22
    ID              shift and go to state 23
    INPUT           shift and go to state 24
    PLUS            shift and go to state 18
    MINUS           shift and go to state 19
    NOT             shift and go to state 25
    OPEN_PARENT     shift and go to state 26

    relexp                         shift and go to state 47
    expression                     shift and go to state 17
    term                           shift and go to state 20
    factor                         shift and go to state 21

state 27

    (13) if -> IF relexp . OPEN_BRACKET stmts CLOSE_BRACKET ELSE OPEN_BRACKET stmts CLOSE_BRACKET
    (14) if -> IF relexp . OPEN_BRACKET stmts CLOSE_BRACKET
    (22) relexp -> relexp . GT relexp
    (23) relexp -> relexp . EQ relexp
    (24) relexp -> relexp . LT relexp

    OPEN_BRACKET    shift and go to state 48
    GT              shift and go to state 33
    EQ              shift and go to state 34
    LT              shift and go to state 35


state 28
